feat(app): Add comprehensive racing platform with championships and discovery
- Add new pages for about, championships, discovery, and race details
- Create authentication provider and multiple modal components (Career, Leaderboard, WhatsNewModal, VotingBoard)
- Add championship system with ChampionshipCard component and championship utilities
- Implement RequestForm and Sidebar navigation components
- Add Firebase integration with firestore.rules and firebase configuration
- Expand race data with F-Reiza championship JSON and additional F1 2012 race images
- Update layout and homepage with LayoutWrapper component
- Refactor existing components (RaceCard, CinematicHero, RaceDetailView, SearchAndFilterPanel)
- Add confetti utility for celebratory interactions
- Update type definitions to support new championship and modal features
- Add docs folder to gitignore
- Update dependencies in package.json and package-lock.json
- Enhance test setup with vitest configuration

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ next-env.d.ts
 
 # Kiro (optional - uncomment if you don't want to share specs/design docs)
 /.kiro/
+/docs/
 
 # OS files
 Thumbs.db
